# Dippy

./: .gitignore  README.md  pyproject.toml
dippy/: __init__.py  __main__.py  bot.py  client.py  events.py  extensions.py  logging.py  sqlalchemy_connector.py
dippy/components/: __init__.py  component.py  handlers.py  manager.py
dippy/config/: __init__.py  config.py  loaders.py  manager.py
dippy/events/: __init__.py  client.py  dispatcher.py  hub.py
dippy/extensions/: __init__.py  extension.py  extension_manager.py  listener.py
dippy/filters/: __init__.py  event.py  filters.py  types.py
dippy/labels/: __init__.py  datastore.py  memory_storage.py  memory_store.py  sqlalchemy_storage.py  storage.py
tests/: stub_client.py  stub_extension_manager.py  test_bot.py  test_config.py  test_events.py  test_extensions.py  test_filters.py  test_labels.py  test_labels_sqlalchemy.py  test_memory_store.py  test_sqlalchemy.py
