[tool.poetry]
name = "discord.Dippy"
version = "0.1.0"
description = "A Discord bot framework built to simplify the complicated parts of bot development."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.4"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
