[tool.poetry]
name = "Dippy.bot"
version = "0.1.0-alpha.17"
description = "A Discord bot framework built to simplify the complicated parts of bot development."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"
packages = [
    { include = "dippy" }
]
readme = "README.md"
keywords = ["discord", "framework", "bot"]
repository = "https://github.com/ZechCodes/Dippy"
homepage = "https://github.com/ZechCodes/Dippy"
documentation = "https://github.com/ZechCodes/Dippy/blob/main/README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]


[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6.0"
pyyaml = "^5.3.1"
bevy = "^0.4.1"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
